Fix links overflowing form container. Closes #141

--- a/bootstrap_admin/static/admin/css/base.css
+++ b/bootstrap_admin/static/admin/css/base.css
@@ -6,6 +6,7 @@ select {
 }
 .main a {
   text-decoration: none;
+  word-break: break-all;
 }
 .popup {
   padding-top: 10px;
